ajustando footer titles

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,7 +30,7 @@
       <div class="uk-child-width-1-2@m" uk-grid>
         <div class="uk-flex uk-flex-right">
           <div>
-            <h5 class="white-text">Parceiros</h5>
+            <h5 class="title-footer">Parceiros</h5>
             <ul class="uk-list">
               <li>Parceiro 1</li>
               <li>Parceiro 2</li>
@@ -41,7 +41,7 @@
         </div>
         <div class="uk-flex uk-flex-right">
           <div>
-            <h5 class="white-text">Contato</h5>
+            <h5 class="title-footer">Contato</h5>
             <ul class="uk-list">
               <li>challengeset@inf.ufg.br</li>
               <li>(62) 3521-1724</li>
