--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,6 +123,11 @@ body {
   font-size: 1.1em;
 }
 
+.title-footer {
+  color: $color-white;
+  font-size: 1.5em;
+}
+
 .ap-title {
   color: #007fa3;
 }
