--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,14 +46,10 @@ body {
 }
 
 #icon-user {
+  color: $color-white;
   &:hover {
-    color: $color-white;
-  }
-  &:active {
-    color: $color-white;
-  }
-  &:focus {
-    color: $color-white;
+    background-color: white;
+    color: $color-navbar;
   }
 }
 
