margin-left logo

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,9 @@
 <div uk-sticky="animation: uk-animation-scale-up; top:100">
-  <nav class="uk-navbar-container navbar  uk-visible@m" uk-navbar>
+  <nav class="uk-navbar-container navbar uk-visible@m" uk-navbar>
     <div class="uk-navbar-left">
-
-      <ul class="uk-navbar-nav">
+      <ul class="uk-navbar-nav uk-margin-xlarge-left">
         <li class="uk-active"><a href="#" class="brand-logo"><img src="assets/images/logo-charset.png"></a></li>
       </ul>
-
     </div>
     <div class="uk-navbar-center">
 
